# ex610_vsc_001

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/lib/inc/: clip.h  component.h  person.h  read_from_disk.h  write_to_disk.h
src/lib/src/: clip.cpp  person.cpp  read_from_disk.cpp  write_to_disk.cpp
src/test/inc/: test_func_01.h  test_func_02.h
src/test/src/: test_func_01.cpp  test_func_02.cpp
